<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context="lk.teachmeit.gallery.Login_screen">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="signup"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="First name &amp; Last name"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/your_name"
                        android:textColorHint="#bababa"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Email"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:hint="@string/user_example_com"
                        android:textColorHint="#bababa"
                        android:inputType="text"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Password"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/password"
                        android:textColorHint="#bababa"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_selector"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/signup_now"
                android:textAllCaps="false"
                android:textColor="@drawable/btn_txt_color"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/login_now"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textColor="#000000" />

    </RelativeLayout>

</RelativeLayout>